--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,40 +1,106 @@
 @font-face {
-    font-family: 'Khand-Regular';
-    src: url('./font/Khand-Regular.ttf');
+  font-family: "Khand-Regular";
+  src: url("./font/Khand-Regular.ttf");
 }
 @font-face {
-    font-family: 'KAITI';
-    src: url(./font/KAITI.ttf);
+  font-family: "KAITI";
+  src: url(./font/KAITI.ttf);
 }
 @font-face {
-    font-family: 'PingFangSC-Regular';
-    src: url(./font/PingFang-SC-Regular.ttf);
+  font-family: "PingFangSC-Regular";
+  src: url(./font/PingFang-SC-Regular.ttf);
 }
 
 @media only screen and (min-width: 1080px) {
-    html {
-        font-size: 15px !important;
-    }
+  html {
+    font-size: 15px !important;
+  }
 }
 @media only screen and (min-width: 1440px) {
-    html {
-        font-size: 25px !important;
-    }
+  html {
+    font-size: 25px !important;
+  }
 }
 
-
-
-
-html,body {
-    width: 100%;
-    height: 100%;
-    font-size: 12px;
-    overflow: hidden;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-size: 12px;
+  overflow: hidden;
 }
 
 #container {
-    width: 100%; 
-    height: 100%;  
-    background-color: rgba(240, 240, 240, 0.9);
-    overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 240, 240, 0.9);
+  overflow: hidden;
+}
+
+#graph {
+  position: absolute;
+  width: 80%;
+  left: 20%;
+  right: 0;
+}
+
+#plot {
+  position: absolute;
+  width: 25%;
+  height: 50%;
+  left: 0;
+  right: auto;
+  top: 50%;
+  bottom: 0;
+}
+
+#panel {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  position: absolute;
+  left: 0;
+  right: auto;
+  top: 0;
+  bottom: 50%;
+  padding: 0;
+  margin: 0;
+  width: 25%;
+}
+
+#panel input {
+  font-size: 12px;
+  padding: 5px 10px;
+  width: 60%;
+}
+
+#panel h1 {
+  font-size: 20px;
+  margin: 0;
+  padding: 10% 0;
+  text-align: center;
+}
+
+#panel ul {
+  list-style: none;
+  display: inline-flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#panel li {
+  font-size: 18px;
+  padding-left: 20%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+#run:hover {
+  background-color: #ccc;
+}
+
+#run {
+  padding: 5% 10% 5% 60%;
+  font-size: 20px;
+  text-align: center;
 }
