--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,6 +16,11 @@ header {
   height: 10%;
 }
 
+svg {
+  width: 100%;
+  height: 100%;
+}
+
 #title {
   border-bottom: 1px solid black;
   overflow: auto;
@@ -59,11 +64,17 @@ header {
 }
 
 #l1 > #timespan {
-  flex: 1 1 20%;
+  flex: 1 1 10%;
+  height: 10%;
+}
+
+#timespan p {
+  margin: 0;
+  padding: 2% 0 0 8%;
 }
 
 #l1 > .frame {
-  flex: 1 1 80%;
+  flex: 1 1 90%;
 }
 
 #content > #l2 {
